--- a/README
+++ b/README
@@ -1,6 +1,12 @@
 Meta-repository containing my development environment.
 
 Setup commands:
+mv .bashrc .bashrc_orig
+mv .bash_aliases .bash_aliases_orig
+mv .screenrc .screenrc_orig
+mv .vimrc .vimrc_orig
+#
 ln -s dotbash/.bashrc .bashrc
 ln -s dotbash/.bash_aliases .bash_aliases
 ln -s dotbash/.screenrc .screenrc
+ln -s .vim/vimrc .vimrc
