--- a/README
+++ b/README
@@ -1,17 +1,19 @@
 Meta-repository containing my development environment.
 
 # Setup commands:
+git clone http://github.com/deronnek/dotenv.git
+#
 mv .bashrc .bashrc_orig
 mv .bash_aliases .bash_aliases_orig
 mv .screenrc .screenrc_orig
 mv .vimrc .vimrc_orig
 mv .vim .vim_orig
-git clone http://github.com/deronnek/dotenv.git
 #
-ln -s dotbash/.bashrc .bashrc
-ln -s dotbash/.bash_aliases .bash_aliases
-ln -s dotbash/.screenrc .screenrc
-ln -s .vim/vimrc .vimrc
+ln -s dotenv/dotbash/.bashrc .bashrc
+ln -s dotenv/dotbash/.bash_aliases .bash_aliases
+ln -s dotenv/dotbash/.screenrc .screenrc
+ln -s dotenv/.vim/vimrc .vimrc
+ln -s dotenv/.vim .vim
 git submodule init
 git submodule update
 cd .vim
