update before setting up on greenlight

--- a/README
+++ b/README
@@ -15,5 +15,12 @@ ln -s dotenv/dotbash/bash_aliases .bash_aliases
 ln -s dotenv/dotbash/screenrc .screenrc
 ln -s dotenv/dotvim/vimrc .vimrc
 ln -s dotenv/dotvim .vim
-ln -s dotenv/xmonad .xmonad
-ln -s dotenv/xmonad/xmobarrc .xmobarrc
+ln -s dotenv/dircolors .dircolors
+ln -s dotenv/dotzsh/zshrc .zshrc
+ln -s dotenv/tmux/tmux.conf .tmux.conf
+ln -s dotenv/oh-my-zsh .oh-my-zsh
+#ln -s dotenv/xmonad .xmonad
+#ln -s dotenv/xmonad/xmobarrc .xmobarrc
+
+echo "xterm-16color|xterm with 16 colors, colors#16, use=xterm," >> /tmp/foo
+sudo tic foo
