added patch to solarized color scheme so I can let vundle manage it

--- a/README
+++ b/README
@@ -27,3 +27,4 @@ sudo tic /tmp/foo
 sudo apt-get install git zsh vim
 git submodule init
 git submodule update
+patch .vim/bundle/vim-colors-solarized/colors/solarized.vim dotenv/kdrsolarized.patch
