--- a/README
+++ b/README
@@ -18,7 +18,6 @@ ln -s dotenv/dotvim .vim
 ln -s dotenv/dircolors .dircolors
 ln -s dotenv/dotzsh/zshrc .zshrc
 ln -s dotenv/tmux/tmux.conf .tmux.conf
-ln -s dotenv/oh-my-zsh .oh-my-zsh
 #ln -s dotenv/xmonad .xmonad
 #ln -s dotenv/xmonad/xmobarrc .xmobarrc
 
@@ -27,4 +26,8 @@ sudo tic /tmp/foo
 sudo apt-get install git zsh vim
 git submodule init
 git submodule update
+ln -s ~/dotenv/dotzsh/aliases.zsh ~/.oh-my-zsh/custom/aliases.zsh
+ln -s dotenv/oh-my-zsh .oh-my-zsh
 patch .vim/bundle/vim-colors-solarized/colors/solarized.vim dotenv/kdrsolarized.patch
+cd ~/dotenv/dotvim/bundle/YouCompleteMe
+./install.py --clang-completer --tern-completer
