--- a/README
+++ b/README
@@ -7,6 +7,7 @@ mv .bash_aliases .bash_aliases_orig
 mv .screenrc .screenrc_orig
 mv .vimrc .vimrc_orig
 mv .vim .vim_orig
+mv .zshrc .zshrc_orig
 #mv .xmonad .xmonad_orig
 #mv .xmobarrc .xmobarrc_orig
 #
@@ -28,6 +29,7 @@ git submodule init
 git submodule update
 ln -s ~/dotenv/dotzsh/aliases.zsh ~/.oh-my-zsh/custom/aliases.zsh
 ln -s dotenv/oh-my-zsh .oh-my-zsh
+vim +PluginInstall +qall
 patch .vim/bundle/vim-colors-solarized/colors/solarized.vim dotenv/kdrsolarized.patch
 cd ~/dotenv/dotvim/bundle/YouCompleteMe
 ./install.py --clang-completer --tern-completer
