--- a/README
+++ b/README
@@ -33,6 +33,11 @@ git submodule init
 git submodule update
 ln -s ~/dotenv/dotzsh/aliases.zsh ~/.oh-my-zsh/custom/aliases.zsh
 ln -s dotenv/oh-my-zsh .oh-my-zsh
+ln -s ~/dotenv/emacs.d ~/.emacs.d
+mkdir ~/.emacs.d/elpa
+mv ~/dotenv/emacs.d/init.el ~/dotenv/emacs.d/init.el_orig
+ln -s ~/dotenv/spacemacs/init.el ~/dotenv/emacs.d/init.el
+ln -s ~/dotenv/spacemacs/elpa/color-theme-solarized-20171024.825 ~/dotenv/emacs.d/elpa/color-theme-solarized-20171024.825
 vim +PluginInstall +qall
 # patched version now in git
 #patch .vim/bundle/vim-colors-solarized/colors/solarized.vim dotenv/kdrsolarized.patch
