--- a/README
+++ b/README
@@ -38,6 +38,8 @@ mkdir ~/.emacs.d/elpa
 mv ~/dotenv/emacs.d/init.el ~/dotenv/emacs.d/init.el_orig
 ln -s ~/dotenv/spacemacs/init.el ~/dotenv/emacs.d/init.el
 ln -s ~/dotenv/spacemacs/elpa/color-theme-solarized-20171024.825 ~/.emacs.d/elpa/color-theme-solarized-20171024.825
+rm ~/.emacs.d/layers/+vim/vim-powerline/local/vim-powerline/vim-colors.el
+ln -s ~/dotenv/spacemacs/vim-colors.el ~/.emacs.d/layers/+vim/vim-powerline/local/vim-powerline/vim-colors.el
 ln -s ~/dotenv/dotspacemacs ~/.spacemacs
 vim +PluginInstall +qall
 # patched version now in git
