--- a/README
+++ b/README
@@ -48,3 +48,4 @@ git clone https://github.com/bhilburn/powerlevel9k.git ~/.oh-my-zsh/custom/theme
 vim +PluginInstall +qall
 cd ~/dotenv/YouCompleteMe
 ./install.py --clang-completer --tern-completer
+git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
