--- a/README
+++ b/README
@@ -44,7 +44,7 @@ ln -s ~/dotenv/spacemacs/vim-colors.el ~/.emacs.d/layers/+vim/vim-powerline/loca
 ln -s ~/dotenv/dotspacemacs ~/.spacemacs
 # patched version now in git
 #patch .vim/bundle/vim-colors-solarized/colors/solarized.vim dotenv/kdrsolarized.patch
-git clone https://github.com/bhilburn/powerlevel9k.git ~/.oh-my-zsh/custom/themes/powerlevel9k
+git clone --depth=1 https://github.com/romkatv/powerlevel10k.git $ZSH_CUSTOM/themes/powerlevel10k
 vim +PluginInstall +qall
 cd ~/dotenv/YouCompleteMe
 ./install.py --clang-completer --tern-completer
