--- a/README
+++ b/README
@@ -1,29 +1,24 @@
 # Repository containing my development environment.
 # Setup commands:
-git clone http://github.com/deronnek/dotenv.git
+# git clone http://github.com/deronnek/dotenv.git
 #
-mv .bashrc .bashrc_orig
-mv .bash_aliases .bash_aliases_orig
-#mv .screenrc .screenrc_orig
-mv .vimrc .vimrc_orig
-mv .vim .vim_orig
-mv .zshrc .zshrc_orig
-mv ~/bin bin_orig
-#mv .xmonad .xmonad_orig
-#mv .xmobarrc .xmobarrc_orig
+mv ~/.bashrc ~/.bashrc_orig
+mv ~/.bash_aliases ~/.bash_aliases_orig
+mv ~/.vimrc ~/.vimrc_orig
+mv ~/.vim ~/.vim_orig
+mv ~/.zshrc ~/.zshrc_orig
+mv ~/bin ~/bin_orig
 #
-ln -s dotenv/dotbash/bashrc .bashrc
-ln -s dotenv/dotbash/bash_aliases .bash_aliases
-#ln -s dotenv/dotbash/screenrc .screenrc
-ln -s dotenv/dotvim/vimrc .vimrc
-ln -s dotenv/dotvim .vim
-ln -s dotenv/dircolors .dircolors
-ln -s dotenv/dotzsh/zshrc .zshrc
-ln -s dotenv/dotzsh/zshenv .zshenv
-ln -s dotenv/tmux/tmux.conf .tmux.conf
+ln -s ~/dotenv/dotbash/bashrc ~/.bashrc
+ln -s ~/dotenv/dotbash/bash_aliases ~/.bash_aliases
+ln -s ~/dotenv/dotbash/screenrc ~/.screenrc
+ln -s ~/dotenv/dotvim/vimrc ~/.vimrc
+ln -s ~/dotenv/dotvim ~/.vim
+ln -s ~/dotenv/dircolors ~/.dircolors
+ln -s ~/dotenv/dotzsh/zshrc ~/.zshrc
+ln -s ~/dotenv/dotzsh/zshenv ~/.zshenv
+ln -s ~/dotenv/tmux/tmux.conf ~/.tmux.conf
 ln -s ~/dotenv/gitbin ~/bin
-#ln -s dotenv/xmonad .xmonad
-#ln -s dotenv/xmonad/xmobarrc .xmobarrc
 
 echo "xterm-16color|xterm with 16 colors, colors#16, use=xterm," >> ~/foo
 tic ~/foo
@@ -33,7 +28,7 @@ cd dotenv
 git submodule update --init --recursive
 ln -s ~/dotenv/oh-my-zsh ~/.oh-my-zsh
 ln -s ~/dotenv/dotzsh/aliases.zsh ~/.oh-my-zsh/custom/aliases.zsh
-mv .emacs.d .emacs.d_orig
+mv ~/.emacs.d ~/.emacs.d_orig
 ln -s ~/dotenv/emacs.d ~/.emacs.d
 mkdir ~/.emacs.d/elpa
 mv ~/dotenv/emacs.d/init.el ~/dotenv/emacs.d/init.el_orig
@@ -42,8 +37,6 @@ ln -s ~/dotenv/spacemacs/elpa/color-theme-solarized-20171024.825 ~/.emacs.d/elpa
 rm ~/.emacs.d/layers/+vim/vim-powerline/local/vim-powerline/vim-colors.el
 ln -s ~/dotenv/spacemacs/vim-colors.el ~/.emacs.d/layers/+vim/vim-powerline/local/vim-powerline/vim-colors.el
 ln -s ~/dotenv/dotspacemacs ~/.spacemacs
-# patched version now in git
-#patch .vim/bundle/vim-colors-solarized/colors/solarized.vim dotenv/kdrsolarized.patch
 git clone --depth=1 https://github.com/romkatv/powerlevel10k.git $ZSH_CUSTOM/themes/powerlevel10k
 git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf
 yes | ~/.fzf/install 
@@ -53,5 +46,6 @@ cd ~/dotenv/YouCompleteMe
 git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
 cd ~/dotenv/tmux/tmux-weather
 npm install
+# Only if you're on osx
 # brew install coreutils
 # brew install fzf
